--- a/main.css
+++ b/main.css
@@ -33,35 +33,35 @@
     } 
     
     h1 {
-    font-family: Times New Roman; /* Гарнитура текста */ 
-    font-size: 25; /* Размер шрифта  */ 
+    font-family: Times New Roman;
+    font-size: 25px; 
     font-style: italic;
     color:#006400;
    } 
     h2 {
-    font-family: Times New Roman; /* Гарнитура текста */ 
-    font-size: 20; /* Размер шрифта в процентах */ 
-    font-style: bold;
+    font-family: Times New Roman;
+    font-size: 20px;
+    font-weight: bold;
     color:#556B2F;
    } 
    
     h3 {
-    font-family: Verdana; /* Гарнитура текста */ 
-    font-size: 20; /* Размер шрифта в процентах */ 
+    font-family: Verdana;
+    font-size: 20px;
     font-style: italic;
     color:#C71585;
    } 
    
     h4 {
-    font-family: Times New Roman; /* Гарнитура текста */ 
-    font-size: 16; /* Размер шрифта в процентах */ 
-    font-style: bold;
+    font-family: Times New Roman;  
+    font-size: 16;
+    font-weight: bold;
     text-decoration: underline;
     color: #ff6600;
    } 
     p {
-    font-family: Verdana; /* Гарнитура текста */ 
-    font-size: 18; /* Размер шрифта в процентах */ 
+    font-family: Verdana;
+    font-size: 18px;
     font-style: italic;
     font-weight: bold; 
     color: #002db3;
